@@ -81,6 +81,14 @@ class ApiUndelete extends ApiBase {
 			wfRunHooks( 'FileUndeleteComplete',
 				array( $titleObj, array(), $wgUser, $params['reason'] ) );
 		}
+		
+		$watch = $this->getWatchlistValue( $params['watchlist'], $titleObj );
+		
+		if ( $params['watch'] || $watch ) {
+			$wgUser->addWatch( $titleObj );
+		} else if ( !$watch ) {
+			$wgUser->removeWatch( $titleObj );
+		}
 
 		$info['title'] = $titleObj->getPrefixedText();
 		$info['revisions'] = intval( $retval[0] );
@@ -104,7 +112,16 @@ class ApiUndelete extends ApiBase {
 			'reason' => '',
 			'timestamps' => array(
 				ApiBase::PARAM_ISMULTI => true
-			)
+			),
+			'watchlist' => array(
+				ApiBase::PARAM_DFLT => 'preferences',
+				ApiBase::PARAM_TYPE => array(
+					'watch',
+					'unwatch',
+					'preferences',
+					'nochange'
+				),
+			),
 		);
 	}
 
@@ -113,7 +130,8 @@ class ApiUndelete extends ApiBase {
 			'title' => 'Title of the page you want to restore.',
 			'token' => 'An undelete token previously retrieved through list=deletedrevs',
 			'reason' => 'Reason for restoring (optional)',
-			'timestamps' => 'Timestamps of the revisions to restore. If not set, all revisions will be restored.'
+			'timestamps' => 'Timestamps of the revisions to restore. If not set, all revisions will be restored.',
+			'watchlist' => 'Unconditionally add or remove the page from your watchlist, use preferences or do not change watch',
 		);
 	}
 
